--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
         "axios": "^0.24.0",
         "express": "^4.17.1",
         "mongoose": "^6.0.8",
-        "soap": "^0.43.0",
-        "xml2js": "^0.4.23",
+        "strong-soap": "^3.3.1",
         "xmlbuilder": "^15.1.1"
     }
 }
