--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
         "@types/axios": "^0.14.0",
         "@types/express": "^4.17.13",
         "@types/node": "^16.10.2",
-        "@types/xml2js": "^0.4.9",
         "nodemon": "^2.0.13",
         "typescript": "^4.4.3"
     },
     "dependencies": {
+        "apollo-server": "^3.6.1",
         "axios": "^0.24.0",
         "express": "^4.17.1",
-        "mongoose": "^6.0.8",
-        "soap": "^0.43.0",
-        "strong-soap": "^3.3.1",
-        "xmlbuilder": "^15.1.1"
+        "graphql": "^16.2.0",
+        "mongoose": "^6.0.8"
     }
 }
