--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "typescript": "^4.4.3"
     },
     "dependencies": {
-        "apollo-server": "^3.6.1",
+        "apollo-server-express": "^3.6.2",
         "axios": "^0.24.0",
         "express": "^4.17.1",
         "graphql": "^16.2.0",
