--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     },
     "dependencies": {
         "axios": "^0.24.0",
-        "express": "^4.17.1",
-        "mongoose": "^6.0.8",
-        "soap": "^0.43.0",
-        "strong-soap": "^3.3.1",
-        "xmlbuilder": "^15.1.1"
+        "express": "^4.17.1"
     }
 }
