--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "typescript": "^4.4.3"
     },
     "dependencies": {
+        "-": "^0.0.1",
+        "@types/ejs": "^3.1.0",
+        "D": "^1.0.0",
         "axios": "^0.24.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.1"
     }
 }
