build command added

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "npm i && tsc",
         "start": "nodemon dist/index.js"
     },
     "keywords": [],
