--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "license": "ISC",
     "devDependencies": {
         "@types/axios": "^0.14.0",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/multer": "^1.4.7",
         "@types/node": "^16.10.2",
         "@types/xml2js": "^0.4.9",
         "nodemon": "^2.0.13",
@@ -23,7 +25,9 @@
         "@types/ejs": "^3.1.0",
         "D": "^1.0.0",
         "axios": "^0.24.0",
+        "cors": "^2.8.5",
         "ejs": "^3.1.6",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "multer": "^1.4.5-lts.1"
     }
 }
